[package]
name = "nlxd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = {version = "1.7.2", features = ["default", "json"]}
thiserror = "1.0.49"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
serde_repr = "0.1.18"
chrono = {version = "0.4.34", features = ["serde"]}
